// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders correctly with just home breadcrumb 1`] = `
<nav class="govuk-breadcrumbs"
     aria-label="Breadcrumb"
>
  <ol class="govuk-breadcrumbs__list"
      data-testid="breadcrumbs--list"
  >
    <li class="govuk-breadcrumbs__list-item">
      <a href="/"
         class="govuk-link govuk-breadcrumbs__link"
      >
        Home
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs renders correctly with multiple breadcrumbs 1`] = `
<nav class="govuk-breadcrumbs"
     aria-label="Breadcrumb"
>
  <ol class="govuk-breadcrumbs__list"
      data-testid="breadcrumbs--list"
  >
    <li class="govuk-breadcrumbs__list-item">
      <a href="/"
         class="govuk-link govuk-breadcrumbs__link"
      >
        Home
      </a>
    </li>
    <li class="govuk-breadcrumbs__list-item">
      <a href="/publications"
         class="govuk-link govuk-breadcrumbs__link"
      >
        Publications
      </a>
    </li>
    <li class="govuk-breadcrumbs__list-item">
      Test publication
    </li>
  </ol>
</nav>
`;
